fixing z-index value of the icon

--- a/src/scss/custom/_form-password.scss
+++ b/src/scss/custom/_form-password.scss
@@ -3,7 +3,7 @@
   position: absolute;
   right: 0;
   top: $v-gap;
-  z-index: 10;
+  z-index: 8;
   padding: 0 $spacer/2;
   background-color: $white;
   .icon {
